# self-improving-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README_RU.md  ROADMAP.md  docker-compose.yml  entrypoint.sh  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: mcp.yaml.example
data/prompts/analyzer/: v001_initial.yaml
data/prompts/main_agent/: v001_initial.yaml
data/prompts/versioner/: current.yaml  v001_initial.yaml
src/agent/: __init__.py  config.py  main.py
src/agent/agents/: __init__.py  analyzer.py  base.py  code_reviewer.py  debugger.py  main_agent.py  orchestrator.py  refactorer.py  researcher.py  sub_agent.py  test_writer.py  versioner.py
src/agent/approval/: __init__.py  confirmator.py  diff_viewer.py  dry_run.py  undo.py
src/agent/clients/: __init__.py  anthropic_client.py  base.py  cerebras_client.py  deepseek_client.py  exceptions.py  factory.py  groq_client.py  openrouter_client.py  sambanova_client.py  zhipu_client.py
src/agent/core/: __init__.py  feedback.py  orchestrator.py
src/agent/interfaces/: __init__.py  cli.py
src/agent/mcp/: __init__.py  client.py  manager.py  registry.py  tools.py
src/agent/memory/: __init__.py  consolidator.py  manager.py  retriever.py  store.py  types.py
src/agent/planning/: __init__.py  manager.py  task.py
src/agent/storage/: __init__.py  logs.py  prompts.py
src/agent/tools/: __init__.py  base.py  filesystem.py  git.py  registry.py  search.py  shell.py  (+2 more)
tests/: __init__.py  test_task.py  test_task_manager.py
